[package]
name = "dedupe"
version = "0.1.0"
edition = "2021"
default-run = "dedupe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kamadak-exif = "0.5.5"
walkdir = "2.3.2"
indicatif = {version = "*", features = ["rayon"]}
thiserror = "1.0.38"
filetime = "0.2.20"
chrono = "0.4.23"
highway = "0.8.1"
simple_logger = "4.0.0"
log = "0.4.17"

