[package]
name = "dedupe"
version = "0.1.0"
edition = "2021"
default-run = "dedupe"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
indicatif = {version = "*", features = ["rayon"]}
thiserror = "1.0.38"
highway = "0.8.1"
maud = "0.24.0"